# account-research-bot

./: .env.example  README.md  docker-compose.yaml
backend/: .env.example  README.md  docker-compose.yaml  pyproject.toml  vector-index.json
backend/app/: __init__.py  queries.py  server.py
frontend/: docker-compose.yaml  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: App.tsx  AskButton.tsx  Card.tsx  Chat.tsx  CreateAccount.tsx  FileList.tsx  Label.tsx  LoadPDF.tsx  NavBar.tsx  PickAccounts.tsx  Query.tsx  Response.tsx  SearchAccount.tsx  SelectAccount.tsx  SideBar.tsx  SubmitButton.tsx  WarningBanner.tsx
frontend/src/providers/: leafygreen.tsx
